--- a/src/main/resources/rabbitmq.properties
+++ b/src/main/resources/rabbitmq.properties
@@ -1,4 +1,4 @@
 rabbit.host=localhost
 rabbit.port=5672
-rabbit.username=admin
-rabbit.password=123456
+rabbit.username=guest
+rabbit.password=guest
